# ZPL-Editor

./: CMakeLists.txt  LICENSE  README.md  deploy.ps1
src/: ActiveTool.h  App.h  AppConfig.cpp  AppConfig.h  I18n.cpp  I18n.h  LabelCanvas.cpp  LabelCanvas.h  MainFrame.cpp  MainFrame.h  PropertiesPanel.cpp  PropertiesPanel.h  ToolIcons.h  ToolboxPanel.cpp  ToolboxPanel.h  ZPLCodePanel.cpp  ZPLCodePanel.h  main.cpp
src/commands/: AddElementCommand.cpp  AddElementCommand.h  Command.h  CommandHistory.cpp  CommandHistory.h  CompoundCommand.h  DeleteElementCommand.cpp  DeleteElementCommand.h  EditPropertyCommand.cpp  EditPropertyCommand.h  MoveElementCommand.cpp  MoveElementCommand.h  ResizeElementCommand.cpp  ResizeElementCommand.h
src/dialogs/: AboutDialog.cpp  AboutDialog.h  AppOptionsDialog.cpp  AppOptionsDialog.h  HelpDialog.cpp  HelpDialog.h  NewLabelDialog.cpp  NewLabelDialog.h
src/elements/: BarcodeElement.cpp  BarcodeElement.h  BoxElement.cpp  BoxElement.h  ImageElement.cpp  ImageElement.h  LabelElement.cpp  LabelElement.h  TextElement.cpp  TextElement.h
src/zpl/: ZPLParser.cpp  ZPLParser.h  ZPLSerializer.cpp  ZPLSerializer.h  ZPLTypes.h
